# UMACO

./: .gitignore  LICENSE  RCL.md  README.md  RED.md  github_checklist.md  license.md  macov8no-3-25-02-2025.py  pyproject.toml  setup.py  setup_revised.py  structure_revised.md  test_universal_solver.py  universal_solver.py
benchmark_analysis/: UMACO_Polynomial_SAT_Scaling_Paper.md  benchmark_analysis_report.txt
benchmarks/MACO_20252/02_ 01138/: results_random_run1.txt
benchmarks/MACO_20252/02_ 01344/: results_random_run1.txt  results_random_run2.txt  results_random_run3.txt
benchmarks/MACO_20252/02_ 01934/: results_random_run1.txt  results_random_run2.txt  results_random_run3.txt
benchmarks/MACO_20252/02_ 02024/: results_random_run1.txt  results_random_run2.txt  results_random_run3.txt
benchmarks/MACO_20252/02_ 02320/: results_random_run1.txt  results_random_run2.txt  results_random_run3.txt
benchmarks/benchmark_analysis/: UMACO_Polynomial_SAT_Scaling_Paper.md  all_parsed_benchmarks.csv
docs/: SYSTEM_ARCHITECTURE.md  adapting_to_llm.md  agent opinions.md  core_concepts.md  dev log 25_09_2025 UMACO.md
examples/: NeuroPheromonebasicv5.py  TSP-MACO.py  UmacoFORCTF-v3-no1.py  basic_optimization.py  circuit_optimizer_gui.py  llm_training.py  macov8no-3-25-02-2025.py  parse_benchmarks.py  ultimate_pf_simulator-v2-n1.py  ultimate_zvss-v4-n1.py  umaco_sat_evidence_suite.py
umaco/: Umaco13.py  Umaco9.py  _init_.py  benchmark_umaco13.py  maco_direct_train16.py  test_umaco13.py  umaco10.py  umaco_gpu_utils.py  visualize_umaco13.py
(+5325 files in other folders)
